# Galaga

./: Background.cpp  Background.h  BezierCurve.cpp  BezierCurve.h  BezierPath.cpp  BezierPath.h  Boss.cpp  Boss.h  Bullet.cpp  Bullet.h  CMakeLists.txt  CaptureBeam.cpp  CaptureBeam.h  CapturedPlayer.cpp  CapturedPlayer.h  DynamicBezierPath.cpp  DynamicBezierPath.h  Enemy.cpp  Enemy.h  EnemyBullet.cpp  EnemyBullet.h  Formation.cpp  Formation.h  Game.cpp  Game.h  Goei.cpp  Goei.h  Highscore.cpp  Highscore.h  Label.cpp  Label.h  Level.cpp  Level.h  Menu.cpp  Menu.h  Player.cpp  Player.h  PlayerBullet.cpp  PlayerBullet.h  UI.cpp  (+3 more)
Data/: galagamap.txt  highscore.txt
Data/Texts/: level.xml
